# call_maze_solver

./: .env.example  .gitignore  INSTALL.md  README.md  package-lock.json  package.json
.playwright-cli/: page-2026-04-02T17-42-56-967Z.yml  page-2026-04-02T17-45-25-576Z.yml  page-2026-04-02T17-47-02-629Z.yml  page-2026-04-02T17-49-28-157Z.yml  page-2026-04-02T19-23-30-248Z.yml  page-2026-04-02T19-24-15-281Z.yml  page-2026-04-02T19-24-55-366Z.yml  page-2026-04-02T19-25-30-906Z.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/routes/: agent.py  calls.py  telnyx.py
backend/app/core/: settings.py
backend/app/db/: session.py
backend/app/integrations/: ai.py  gemini_conversation_testkit.py  telnyx.py
backend/app/models/: __init__.py  call.py  call_event.py  enums.py  operator_session.py  recording.py  transcript.py
backend/app/repositories/: calls.py
backend/app/schemas/: agent.py  calls.py
backend/app/services/: browser_events.py  call_orchestrator.py
backend/app/websocket/: browser.py
backend/call_maze_solver_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_ai.py  test_api.py  test_browser_live_smoke.py  test_gemini_conversation_simulation.py  test_repository.py  test_schemas.py  test_state_machine.py
data/: app.db
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
scripts/: browser-live-smoke.mjs  browser-live-smoke.ps1  generate_browser_live_fixture.py  start-dev.ps1  (+2 more)
(+23 files in other folders)
