[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "call-maze-solver-backend"
version = "0.1.0"
description = "Backend for Call Maze Solver"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "google-genai>=0.7.0",
  "httpx>=0.27.0",
  "pynacl>=1.5.0",
  "orjson>=3.10.0",
  "pydantic-settings>=2.4.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
